--- a/app/src/main/res/layout/fragment_login_signup.xml
+++ b/app/src/main/res/layout/fragment_login_signup.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginSignupFragment">
+    tools:context=".LoginSignupFragment"
+    android:layout_marginRight="20dp"
+    android:layout_marginLeft="20dp">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/hey_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Hey!"
+        android:textSize="93dp"
 
-</FrameLayout>
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
