--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -15,6 +15,6 @@
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
-       android:src="@drawable/voguely_logo.png"/>
+       android:src="@drawable/voguely_logo"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
