--- a/app/src/main/res/layout/fragment_login_signup.xml
+++ b/app/src/main/res/layout/fragment_login_signup.xml
@@ -3,18 +3,133 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".LoginSignupFragment"
     android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp">
+    <!--
+        <com.google.android.material.tabs.TabLayout>
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#1db995"
 
-    <!-- TODO: Update blank fragment layout -->
+        </com.google.android.material.tabs.TabLayout>
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="355dp"
+            android:layout_height="455dp"
+            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
+            tools:layout_editor_absoluteX="8dp" />
+
+-->
+
+            <TextView
+                android:id="@+id/hey_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/HeyText"
+                android:textSize="40dp"
+                android:textColor="#E8772E"
+                android:layout_marginTop="70dp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
     <TextView
-        android:id="@+id/hey_text"
+        android:id="@+id/welcome_back_text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hey!"
-        android:textSize="93dp"
+        android:layout_height="wrap_content"
+        android:text="@string/SubtitleText"
+        android:textSize="30dp"
+        android:textColor="#E8772E"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hey_text"/>
 
+
+        <TextView
+            android:id="@+id/login_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/LoginTab"
+            android:textColor="#E8772E"
+            android:gravity="center_horizontal"
+            android:textSize="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/signUp_text_view"
+            app:layout_constraintTop_toBottomOf="@id/welcome_back_text"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="50dp"
+
+            />
+        <TextView
+            android:id="@+id/signUp_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/SignUpTab"
+            android:gravity="center_horizontal"
+            android:textColor="#E8772E"
+            android:textSize="20dp"
+            app:layout_constraintStart_toEndOf="@id/login_text_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/welcome_back_text"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="50dp"
+            />
+    <EditText
+        android:id="@+id/email_field"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="@string/emailField"
+        android:inputType="textEmailAddress"
+        android:backgroundTint="#E1D9D1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/login_text_view"
+        android:layout_marginTop="30dp"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/password_field"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:hint="@string/passwordField"
+        android:inputType="textPassword"
+        android:backgroundTint="#E1D9D1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/email_field"
+        android:layout_marginTop="40dp"
+        />
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="#E8772E"
+        android:text="@string/loginButton"
+        android:layout_marginTop="90dp"
+        app:layout_constraintTop_toBottomOf="@id/password_field"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15dp"
+        android:text="@string/termsConditionText"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
