--- a/app/src/main/res/layout/fragment_login_signup.xml
+++ b/app/src/main/res/layout/fragment_login_signup.xml
@@ -6,43 +6,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".LoginSignupFragment"
     android:layout_marginRight="20dp"
-    android:layout_marginLeft="20dp">
-    <!--
-        <com.google.android.material.tabs.TabLayout>
-            android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#1db995"
+    android:layout_marginLeft="20dp"
+    android:id="@+id/form_login_signup">
 
-        </com.google.android.material.tabs.TabLayout>
-
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/viewPager"
-            android:layout_width="355dp"
-            android:layout_height="455dp"
-            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
-            tools:layout_editor_absoluteX="8dp" />
-
--->
-
-            <TextView
-                android:id="@+id/hey_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/HeyText"
-                android:textSize="40dp"
-                android:textColor="#E8772E"
-                android:layout_marginTop="70dp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+    <TextView
+        android:id="@+id/hey_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/HeyText"
+        android:textSize="40dp"
+        android:textColor="#E8772E"
+        android:layout_marginTop="70dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
                 />
     <TextView
         android:id="@+id/welcome_back_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/SubtitleText"
+        android:text="@string/SubtitleTextLogin"
         android:textSize="30dp"
         android:textColor="#E8772E"
         android:textStyle="bold"
@@ -50,36 +34,50 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/hey_text"/>
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="bottom"
+        app:tabTextColor="#E8772E"
+        app:tabIndicatorColor="#E8772E"
+        app:tabMode="fixed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/welcome_back_text"
+        >
 
-        <TextView
-            android:id="@+id/login_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/LoginTab"
-            android:textColor="#E8772E"
-            android:gravity="center_horizontal"
-            android:textSize="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/signUp_text_view"
-            app:layout_constraintTop_toBottomOf="@id/welcome_back_text"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="50dp"
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/login_tab"
+                android:textColor="#E8772E"
+                android:gravity="center_horizontal"
+                android:textSize="20dp"
+                app:layout_constraintStart_toStartOf="parent"
 
-            />
-        <TextView
-            android:id="@+id/signUp_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/SignUpTab"
-            android:gravity="center_horizontal"
-            android:textColor="#E8772E"
-            android:textSize="20dp"
-            app:layout_constraintStart_toEndOf="@id/login_text_view"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/welcome_back_text"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="50dp"
-            />
+                app:layout_constraintTop_toBottomOf="@id/tabs"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="50dp"
+                />
+             <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/SignUpTab"
+                android:gravity="center_horizontal"
+                android:textColor="#E8772E"
+                android:textSize="20dp"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tabs"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="50dp"
+                />
+
+    </com.google.android.material.tabs.TabLayout>
+
+
+
     <EditText
         android:id="@+id/email_field"
         android:layout_width="match_parent"
@@ -89,7 +87,7 @@
         android:backgroundTint="#E1D9D1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login_text_view"
+        app:layout_constraintTop_toBottomOf="@id/tabs"
         android:layout_marginTop="30dp"
         />
 
@@ -107,6 +105,7 @@
         />
 
     <Button
+        android:id="@+id/actionButton"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
