--- a/app/src/main/res/layout/fragment_login_signup.xml
+++ b/app/src/main/res/layout/fragment_login_signup.xml
@@ -48,6 +48,7 @@
         >
 
             <com.google.android.material.tabs.TabItem
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/login_tab"
@@ -55,7 +56,6 @@
                 android:gravity="center_horizontal"
                 android:textSize="20dp"
                 app:layout_constraintStart_toStartOf="parent"
-
                 app:layout_constraintTop_toBottomOf="@id/tabs"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="50dp"
@@ -84,7 +84,8 @@
         android:layout_height="50dp"
         android:hint="@string/emailField"
         android:inputType="textEmailAddress"
-        android:backgroundTint="#E1D9D1"
+        android:background="#E1D9D1"
+        android:paddingLeft="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tabs"
@@ -97,7 +98,8 @@
         android:layout_height="50dp"
         android:hint="@string/passwordField"
         android:inputType="textPassword"
-        android:backgroundTint="#E1D9D1"
+        android:background="#E1D9D1"
+        android:paddingLeft="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/email_field"
