added the view model and state flow, working

--- a/app/src/main/res/layout/fragment_login_signup.xml
+++ b/app/src/main/res/layout/fragment_login_signup.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".LoginSignupFragment"
+    tools:context=".ui.login.login.LoginSignupFragment"
     android:layout_marginRight="25dp"
     android:layout_marginLeft="25dp"
     android:id="@+id/form_login_signup">
