--- a/app/src/main/res/layout/recycler_view_single_item_layout.xml
+++ b/app/src/main/res/layout/recycler_view_single_item_layout.xml
@@ -21,7 +21,6 @@
         android:background="@drawable/roundstyle"
         >
 
-
         <ImageView
             android:id="@+id/item_pic"
             android:layout_width="0dp"
@@ -50,7 +49,7 @@
             android:layout_height="wrap_content"
             android:text="@string/item_price"
             android:textSize="15dp"
-            android:textColor="@color/vivid_red_tangelo"
+            android:textColor="#FE3A30"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/item_name" />
@@ -76,17 +75,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawablePadding="5dp"
-            android:gravity="center"
-            android:padding="5dp"
             android:textSize="10dp"
             android:text="@string/reviews_counter"
             android:textColor="#0C1A30"
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="15dp"
+            android:gravity="center"
+            app:drawableEndCompat="@drawable/ic_baseline_more_vert_24"
             app:layout_constraintStart_toEndOf="@id/item_rate"
             app:layout_constraintBaseline_toBaselineOf="@id/item_rate"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:drawableEndCompat="@drawable/ic_baseline_more_vert_24" />
+             />
+
+        <!-- TODO: Update blank fragment layout
+        <ImageView
+            android:id="@+id/see_more_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:drawableEndCompat="@drawable/ic_baseline_more_vert_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
