stated to code the logic for search, still not ready, addes a draft of the layout for cart

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -15,7 +15,7 @@
             android:layout_marginTop="28dp"
             android:background="@drawable/roundstyle"
             android:backgroundTint="#FAFAFA"
-            android:hint="Search Product Name"
+            android:hint="@string/searchbarHint"
             android:padding="10dp"
             app:layout_constraintEnd_toStartOf="@id/search_bar_icon"
             app:layout_constraintStart_toStartOf="parent"
