added the on click listener on itemes for moving in the cart, added the connection of cart with home and search

--- a/app/src/main/res/layout/recycler_view_single_item_cart.xml
+++ b/app/src/main/res/layout/recycler_view_single_item_cart.xml
@@ -34,7 +34,7 @@
             android:id="@+id/item_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="name of the item"
+            android:text="AirPods Max"
             android:textSize="15dp"
             android:textColor="#0C1A30"
             android:layout_marginTop="10dp"
