--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -44,17 +44,18 @@
     <TextView
         android:id="@+id/price_label"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
+        android:background="#D9D9D9"
         android:gravity="center_vertical"
         android:paddingLeft="20dp"
         android:text="Total Price:"
         android:textColor="#000000"
-        android:textStyle="bold"
         android:textSize="15dp"
-        android:background="#D9D9D9"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/price_amount"
@@ -71,8 +72,9 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
+        android:id="@+id/buy_button_cart"
+        android:layout_width="100dp"
+        android:layout_height="48dp"
         android:text="Buy"
         android:layout_marginRight="20dp"
         android:layout_marginTop="25dp"
