--- a/app/src/main/res/layout/recycler_view_single_item_cart.xml
+++ b/app/src/main/res/layout/recycler_view_single_item_cart.xml
@@ -52,6 +52,7 @@
             app:layout_constraintTop_toBottomOf="@id/item_name"/>
 
         <TextView
+            android:id="@+id/item_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="X 1"
