--- a/app/src/main/res/layout/recycler_view_single_item_cart.xml
+++ b/app/src/main/res/layout/recycler_view_single_item_cart.xml
@@ -10,7 +10,7 @@
     android:layout_marginEnd="8dp"
     app:cardCornerRadius="5dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -24,41 +24,41 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <ImageView
-            android:id="@+id/item_pic"
+            android:id="@+id/item_pic_cart"
             android:layout_width="150dp"
             android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/item_name"
+            android:id="@+id/item_name_cart"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="AirPods Max"
             android:textSize="15dp"
             android:textColor="#0C1A30"
             android:layout_marginTop="10dp"
-            app:layout_constraintStart_toEndOf="@id/item_pic"
+            app:layout_constraintStart_toEndOf="@id/item_pic_cart"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/item_price"
+            android:id="@+id/item_price_cart"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="EUR 300"
             android:textColor="#FE3A30"
             android:textSize="15dp"
-            app:layout_constraintStart_toEndOf="@id/item_pic"
-            app:layout_constraintTop_toBottomOf="@id/item_name"/>
+            app:layout_constraintStart_toEndOf="@id/item_pic_cart"
+            app:layout_constraintTop_toBottomOf="@id/item_name_cart"/>
 
         <TextView
-            android:id="@+id/item_quantity"
+            android:id="@+id/item_quantity_cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="X 1"
             android:textColor="#C4C4C4"
-            app:layout_constraintStart_toEndOf="@id/item_pic"
-            app:layout_constraintTop_toBottomOf="@id/item_price"
+            app:layout_constraintStart_toEndOf="@id/item_pic_cart"
+            app:layout_constraintTop_toBottomOf="@id/item_price_cart"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
