--- a/app/src/main/res/layout/recycler_view_single_item_cart.xml
+++ b/app/src/main/res/layout/recycler_view_single_item_cart.xml
@@ -8,6 +8,8 @@
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
+    android:paddingVertical="10dp"
+    android:layout_marginBottom="8dp"
     app:cardCornerRadius="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,15 +22,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_cancel_24"
+            android:layout_margin="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <ImageView
             android:id="@+id/item_pic_cart"
             android:layout_width="150dp"
-            android:layout_height="match_parent"
+            android:layout_height="150dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <TextView
             android:id="@+id/item_name_cart"
@@ -36,16 +40,18 @@
             android:layout_height="wrap_content"
             android:text="AirPods Max"
             android:textSize="15dp"
+            android:layout_marginStart="10dp"
             android:textColor="#0C1A30"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toEndOf="@id/item_pic_cart"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/cancel_icon"/>
 
         <TextView
             android:id="@+id/item_price_cart"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="EUR 300"
+            android:layout_marginStart="10dp"
             android:textColor="#FE3A30"
             android:textSize="15dp"
             app:layout_constraintStart_toEndOf="@id/item_pic_cart"
@@ -56,6 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="X 1"
+            android:layout_marginStart="10dp"
             android:textColor="#C4C4C4"
             app:layout_constraintStart_toEndOf="@id/item_pic_cart"
             app:layout_constraintTop_toBottomOf="@id/item_price_cart"
