added some code for skipping the loginin screen when the user is logged in, not workig yet

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_splashFragment_to_loginSignupFragment"
             app:destination="@id/loginSignupFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_mainFragment2"
+            app:destination="@id/mainFragment2" />
     </fragment>
     <fragment
         android:id="@+id/loginSignupFragment"
