--- a/app/src/main/res/menu/botton_navigation_menu.xml
+++ b/app/src/main/res/menu/botton_navigation_menu.xml
@@ -3,16 +3,16 @@
     <item
         android:id="@+id/homeFragment"
         android:icon="@drawable/ic_baseline_home_24"
-        android:title="Home"/>
+        android:title="@string/homeMenuBottNavBar"/>
 
     <item
         android:id="@+id/searchFragment"
         android:icon="@drawable/ic_baseline_search_24"
-        android:title="Search"/>
+        android:title="@string/searchMenuBottNavBar"/>
 
     <item
         android:id="@+id/cartFragment"
         android:icon="@drawable/ic_baseline_shopping_cart_24"
-        android:title="Cart"/>
+        android:title="@string/cartMenuBottNavBar"/>
 
 </menu>
