--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -8,12 +8,12 @@
     <fragment
         android:id="@+id/cartFragment"
         android:name="com.wit.voguely.ui.main.cart.CartFragment"
-        android:label="fragment_cart"
+        android:label="Cart"
         tools:layout="@layout/fragment_cart" />
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.wit.voguely.ui.main.home.HomeFragment"
-        android:label="fragment_home"
+        android:label="Home"
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_cartFragment"
@@ -22,7 +22,7 @@
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.wit.voguely.ui.main.search.SearchFragment"
-        android:label="fragment_search"
+        android:label="Search"
         tools:layout="@layout/fragment_search" >
         <action
             android:id="@+id/action_searchFragment_to_cartFragment"
