--- a/app/src/main/res/menu/pop_up_menu.xml
+++ b/app/src/main/res/menu/pop_up_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/add_to_cart"
+        android:id="@+id/add_to_cart_popup"
         android:title="Add to cart"/>
 
 </menu>
