added the fecth from cart DB to the cart screen, working but with delay, last item added is not visible immediatally

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -72,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:text="EUR 900"
+        android:text="EUR XXX"
         android:textColor="#FE3A30"
         android:textStyle="bold"
         android:textSize="15dp"
