added design and some code in fragment for the green checkmark when the suer select buy, still not working

--- a/app/src/main/res/menu/botton_navigation_menu.xml
+++ b/app/src/main/res/menu/botton_navigation_menu.xml
@@ -12,7 +12,7 @@
 
     <item
         android:id="@+id/cartFragment"
-        android:icon="@drawable/ic_baseline_shopping_cart_24"
+        android:icon="@drawable/ic_cart"
         android:title="@string/cartMenuBottNavBar"/>
 
 </menu>
